# Codex_Agent

./: .gitignore  00-문서-지도.md  01-소스-계층과-권한.md  02-런타임-오케스트레이션-절차.md  03-스테이지-스킬과-contract.md  04-MCP-컨텍스트-원장.md  05-라우터-디스트리뷰터-물리-에이전트.md  06-검증-훅-피드백-게이트.md  07-운영-플레이북.md  AGENTS.md  README.md
agent-architecture/: 00-canonical-map.md  01-harness-layer.md  02-context-planning.md  03-worker-materialization.md  03-worker-routing.md  04-aggregation-review.md  04-review-flow.md  05-feedback-lifecycle.md  06-agent-roster-models.md  07-contracts-ledgers.md  08-quality-evals.md  09-runtime-orchestration-steps.md  AGENT-ARCHITECTURE-MAPPER.md  AGENT-ARCHITECTURE.md  AGENTS.local-template.md  apply-agents-inheritance.py  harness_gate.py  harness_handoff.py  validate-agent-architecture.ps1  validate-agent-architecture.py  validate-runtime-artifact.py  validate-runtime-gate-smoke.py  validate-session-runtime.py  validate-skill-contracts.py
agent-architecture/validators/: __init__.py  constants.py  contracts.py  docs.py  prompt_contracts.py  skill_contracts.py
agents/01-core-development/: api-designer.toml  backend-developer.toml  code-mapper.toml  electron-pro.toml  (+8 more)
docs/: automation-pr-evidence-checklist.md  skill-growth-map.md
mcp/context-ledger/: .gitignore  README.md  pyproject.toml
mcp/context-ledger/docs/maestro/: .workspace-root
mcp/context-ledger/scripts/: start-http.ps1
mcp/context-ledger/src/context_ledger_mcp/: __init__.py  ledger.py  schema.sql  server.py  validation.py
mcp/context-ledger/tests/: test_ledger.py
scripts/: ensure-mcp-tool-approvals.ps1
(+191 files in other folders)
